deps/jansson/test/suites/invalid/object-no-colon/error.strip
1 4 4
':' expected near end of file
